# safereport-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py  tasks.py
app/api/routers/: autocomplete.py  geocoding.py  occurrences.py  places.py  reviews.py
app/api/schemas/: coordinates.py  location.py  places.py
app/application/dtos/: geocoding_dto.py
app/application/use_cases/: analyze_danger_points.py  create_review_use_case.py  get_address_use_case.py  get_coordinates_use_case.py  get_occurrences_use_case.py  get_suggestions_use_case.py
app/application/use_cases/occurrences/: get_occurrence_hotspots.py  occurrences.py
app/application/usecases/occurrences/: get_occurrence_hotspots.py  occurrences.py
app/application/usecases/places/: autocomplete.py  geocode.py  reverse_geocode.py
app/core/: config.py
app/core/entities/: occurrence.py  review.py
app/core/interfaces/: autocomplete_repository.py  geocode_repository.py  occurrence_repository.py  review_repository.py
app/core/use_cases/: cluster_occurrences_use_case.py  create_review_use_case.py  get_address_use_case.py  get_coordinates_use_case.py  get_occurrences_use_case.py  get_suggestions_use_case.py
app/domain/entities/: address.py  occurrence.py  place.py  review.py
app/domain/geocoding/entities/: address.py  coordinates.py
app/domain/geocoding/interfaces/: reverse_geocode_repository.py
app/domain/geocoding/use_cases/: get_address_use_case.py  get_coordinates_use_case.py
app/domain/occurrences/interfaces/: occurrence_repository.py
app/domain/occurrences/use_cases/: cluster_occurrences_use_case.py  get_hotspots_use_case.py  get_occurrences_use_case.py
app/domain/places/entities/: suggestion.py
app/domain/places/interfaces/: autocomplete_repository.py
app/domain/places/use_cases/: get_suggestions_use_case.py
app/domain/repositories/: autocomplete_repository.py  geocode_repository.py  google_maps.py  occurrence.py  occurrence_repository.py  reverse_geocode_repository.py  review_repository.py
app/domain/reviews/interfaces/: review_repository.py
app/domain/reviews/use_cases/: create_review_use_case.py
app/domain/services/: hotspot_analysis_service.py
app/infrastructure/api_clients/: autocomplete_client.py  autocomplete_service.py  crossfire_auth_service.py  crossfire_client.py  geocode_client.py  geocode_service.py  google_autocomplete_client.py  google_geocode_client.py  google_reverse_geocode_client.py  reverse_geocode_client.py  reverse_geocode_service.py
app/infrastructure/auth/: crossfire_auth_service.py
app/infrastructure/cache/: redis.py  redis_cache_service.py
app/infrastructure/database/: supabase_client.py
app/infrastructure/database/repositories/: supabase_review_repository.py
app/infrastructure/persistence/: supabase_review_repository.py
app/infrastructure/services/: crossfire_auth_service.py
app/infrastructure/services/hotspot_analysis/: sklearn_hotspot_analysis_service.py
app/models/: incidents.py  occurrences.py
app/routers/: incidents.py  occurrences.py  places.py
app/schemas/: address.py  coordinates.py  location.py  response.py  review.py  suggestion.py
app/services/: crossfire_api.py  hotspot_service.py  occurrences_service.py  supabase_service.py
app/utils/: validate_coordinates.py
nginx/conf.d/: default.conf
