[project]
name = "safereport-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.3.1",
    "fastapi[standard]>=0.116.1",
    "folium>=0.20.0",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "scikit-learn>=1.7.1",
    "supabase>=2.22.0",
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]

# --- Configuração do Black (Formatador) ---
[tool.black]
line-length = 88        # Define o comprimento máximo da linha. 88 é o padrão do Black.
target-version = ['py310'] # Opcional, mas bom para garantir consistência. (Usa a tua versão)

# --- Configuração do Ruff (Linter e Import Sorter) ---
[tool.ruff]
line-length = 88        # IMPORTANTE: Tem de ser igual ao do Black!
select = [
    "E",  # Pycodestyle (Erros)
    "W",  # Pycodestyle (Avisos)
    "F",  # Pyflakes (Bugs lógicos, como variáveis não usadas)
    "I",  # Isort (Ordenação de imports)
    "UP", # pyupgrade (Sugere sintaxes mais modernas)
]
ignore = ["E501"]     # Ignora a regra de "linha muito longa", pois o Black já cuida disso.

# Diz ao Ruff onde está o teu código fonte
src = ["app"]

[tool.ruff.format]
# Se quisesses usar o ruff para formatar (em vez do black), descomentavas isto.
# Por agora, deixamos o Black fazer esse trabalho.
# quote-style = "double"
# indent-style = "space"

# --- Configuração do Mypy (Verificador de Tipos) ---
[tool.mypy]
python_version = "3.10"       # Alinha com a versão do teu projeto
warn_return_any = true        # Avisa se uma função retornar 'Any' implicitamente
ignore_missing_imports = true # MUITO IMPORTANTE: Não dês erro se uma biblioteca (ex: fastapi)
                              # não tiver type hints. Foca-te só no *teu* código.
check_untyped_defs = true     # Exige que *tu* escrevas type hints nas tuas funções.

# --- Configuração do Pytest (Testes) ---
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",                   # Diz ao pytest para procurar testes apenas na pasta 'tests'
]
python_files = "test_*.py"     # Padrão dos ficheiros de teste
python_functions = "test_*"    # Padrão das funções de teste
addopts = "-v -s --cov=app --cov-report=term-missing" # Opções padrão:
                                                     # -v: verbose (mais detalhes)
                                                     # -s: mostra 'prints' (bom para debug)
                                                     # --cov=app: calcula cobertura de testes da pasta 'app'
                                                     # --cov-report=term-missing: mostra linhas sem cobertura
